--- a/MerwasApp/src/App.css
+++ b/MerwasApp/src/App.css
@@ -1,5 +1,7 @@
 body{
     background-color: rgb(247, 247, 247);
-       
-    
+    color: #4f5864;
+    font-weight: 400;
+    line-height: 1.3;
+    font-style: normal;
 }
