--- a/MerwasApp/src/componants/Home.css
+++ b/MerwasApp/src/componants/Home.css
@@ -14,6 +14,7 @@ span {
   margin-left: 4rem;
   margin-top: 1rem;
 }
+/* cards style */
 .card {
   margin-left: 20px;
 }
@@ -37,7 +38,7 @@ h4 {
   line-height: 1.4;
 }
 #from {
-    display: block;
+  display: block;
   line-height: 1.2;
   text-align: right;
   font-size: 12px;
@@ -52,14 +53,45 @@ h4 {
   line-height: 1.2;
   text-align: right;
   color: #1eb3ec;
-width: 100%;
-    font-size: 35px;
-    line-height: 1;
-    font-weight: 500;
-    cursor: pointer;
-
+  width: 100%;
+  font-size: 35px;
+  line-height: 1;
+  font-weight: 500;
+  cursor: pointer;
 }
-#twoPrice{
-    display: block;
-    text-align: right;
+#twoPrice {
+  display: block;
+  text-align: right;
+}
+.heart {
+  box-sizing: inherit;
+  content: " ";
+  opacity: 1;
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: #eff3fa 0 0 no-repeat padding-box;
+  opacity: 0.9;
+  border-radius: 50%;
+  cursor: grabbing;
+}
+
+/* list group style */
+.quantity{color: #92a2ad;
+font-weight: 300;
+font-size: 12px;
+}
+#list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    font-weight: 500;
+    color: #4f5864;
+    line-height: 1;
+    transition: all .15s ease-out;
+    padding: 15px 20px;
+
 }
