--- a/MerwasApp/src/componants/Home.css
+++ b/MerwasApp/src/componants/Home.css
@@ -101,9 +101,11 @@ font-size: 12px;
     background-color: #fff;
     align-items: center;
     padding: 38px;
-    max-width: 940px;
+    max-width: 85rem;
     margin: 25px auto 0;
     flex-wrap: wrap;
+    margin-left: 4rem;
+    margin-top: 1rem;
 }
 .message{
 color: #01b2ee;
