--- a/MerwasApp/src/componants/Home.css
+++ b/MerwasApp/src/componants/Home.css
@@ -115,7 +115,7 @@ padding-right: 10px;
 width: 100%;
 margin-bottom: 18px;
 }
-.btn{
+#button-addon2{
     color: white;
     box-shadow: 0 0 8px 0 rgb(1 178 238 / 50%);
     border: none;
