--- a/MerwasApp/src/componants/Footer.css
+++ b/MerwasApp/src/componants/Footer.css
@@ -1,3 +1,8 @@
+.footer{
+    margin-top: 1.5rem;
+    margin-left: 1rem;
+    margin-right: 2rem;
+}
 .footer-col{
         display: flex;
         justify-content: space-between;
@@ -23,3 +28,14 @@
     
 }
 
+.main-footer__copyright {
+    margin: auto;
+    display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 60px;
+    align-items: center;
+    justify-content: center;
+    border-top: 1px solid #dce3ed;
+    background-color: #fff;
+}
