finish the main style footer

--- a/MerwasApp/src/componants/Home.css
+++ b/MerwasApp/src/componants/Home.css
@@ -15,9 +15,9 @@ span {
   margin-top: 1rem;
 }
 /* cards style */
-.card {
+/* .card {
   margin-left: 20px;
-} 
+}  */
 .bought {
   font-size: 14px;
   color: #92a2ad;
