--- a/MerwasApp/src/componants/Home.css
+++ b/MerwasApp/src/componants/Home.css
@@ -14,10 +14,7 @@ span {
   margin-left: 1.5rem;
   margin-top: 1rem;
 }
-/* cards style */
-/* .card {
-  margin-left: 20px;
-}  */
+
 .bought {
   font-size: 14px;
   color: #92a2ad;
@@ -65,10 +62,8 @@ h4 {
 }
 .heart {
   box-sizing: inherit;
-  content: " ";
-  opacity: 1;
-  width: 22px;
-  height: 22px;
+  width: 30px;
+  height: 30px;
   position: absolute;
   top: 10px;
   right: 10px;
@@ -77,7 +72,13 @@ h4 {
   border-radius: 50%;
   cursor: grabbing;
 }
-
+#heart-circle{
+  top: 4px;
+  right: 4px;
+  opacity: 1;
+  position: absolute;
+  
+}
 /* list group style */
 .quantity{color: #92a2ad;
 font-weight: 300;
