--- a/MerwasApp/src/componants/Navegation.css
+++ b/MerwasApp/src/componants/Navegation.css
@@ -1,5 +1,5 @@
 .Nav{
-    background-color: rgb(78, 210, 243);
+    background-color: #01b2ee;
     height: 4rem;
     font-size: 15px;
     font-weight: bold;
