--- a/MerwasApp/src/componants/Footer.css
+++ b/MerwasApp/src/componants/Footer.css
@@ -23,9 +23,18 @@
         height: 34px;
         margin-right: 10px;
         fill: #4f5864;
+        margin-bottom: 20px;
     
 }
-
+.main-footer__heading{
+    margin-bottom: 20px;
+}
+.single-icon{
+    margin-right: 13px;
+}
+.input-group{
+    margin-top: 20px
+}
 .main-footer__copyright {
     margin: auto;
     display: flex;
