--- a/MerwasApp/src/componants/Home.css
+++ b/MerwasApp/src/componants/Home.css
@@ -84,6 +84,10 @@ h4 {
 font-weight: 300;
 font-size: 12px;
 }
+.sent{
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
 #list{
     display: flex;
     align-items: center;
